# agx_arm_ws

./: .gitignore  AGENTS.md  E1001.md  E1002.md  README.md  agx_arm.repos  install_ros2_jazzy_agx_arm.sh  page.json  嗨递老_产品技术文档.md  嗨递老_产品技术文档_v2.md  食光破壁者_产品技术文档.md
.codex/: config.toml  run_mcp_server.sh
UI/: confirm.json  happy_birthday.json  menu.json  soup1.json  soup2.json  soup3.json  soup4.json  soup_1.json  soup_2.json  soup_3.json  welcome.json
data/: abc.csv  point.json  waypoints_to_point.csv  waypoints_to_point_def.csv
postman_api/: postman.json
src/agx_arm_agent/: package.xml  setup.cfg  setup.py
src/agx_arm_agent/agx_arm_agent/: agx_arm_mcp_server.py
src/agx_arm_agent/launch/: start_agx_arm_agent.py
src/agx_arm_ctrl/: package.xml  setup.cfg  setup.py
src/agx_arm_ctrl/agx_arm_ctrl/: agx_arm_ctrl_single_node.py
src/agx_arm_ctrl/agx_arm_ctrl/effector/: __init__.py  agx_gripper.py  revo2.py
src/agx_arm_ctrl/launch/: start_single_agx_arm.launch.py  start_single_agx_arm_moveit.launch.py  start_single_agx_arm_rviz.launch.py
src/agx_arm_moveit/: CMakeLists.txt  README.md  README_EN.md  package.xml
src/agx_arm_moveit/config/: agx_arm.ros2_control.xacro  (+15 more)
src/agx_custom_trajectory/: CMakeLists.txt  package.xml
src/agx_custom_trajectory/scripts/: smart-height_node  trajectory_player_node
src/agx_custom_trajectory/srv/: GoHome.srv  PlayTrajectory.srv  SmartHeight.srv
tools/: Prompt.md  generate_welcome_audio.py  qwen_omni_compatible_voice_mvp.md  qwen_omni_compatible_voice_mvp.py  qwen_omni_realtime_mvp.md  qwen_omni_realtime_mvp.py
(+10 files in other folders)
